--- a/.github/workflows/build-and-map-container-image.yml
+++ b/.github/workflows/build-and-map-container-image.yml
@@ -28,7 +28,7 @@ jobs:
         with:
           push: true
           tags: ${{ secrets.IMAGE_TAG }}
-          file: Dockerfile
+          file: docker/Dockerfile
      # Run Mapping Tool in MSDO
       - name: Run Microsoft Security DevOps Analysis
         uses: microsoft/security-devops-action@latest
